# trame_optimeyes

./: .gitignore  .pdm.toml  ITKcheckerBoard.ipynb  JPEGReader.ipynb  JPEGReader.py  README.md  VTKCheckerBoard.ipynb  pyproject.toml  python_and_vtk.ipynb  python_and_vtk.py  trame-checkerboard.py  trame-viewer.py  vtk_hello_world.ipynb
archive/: JPEGReader.py  README.md  VTKCheckerBoard.ipynb  pyproject.toml  trame-checkerboard.py  trame-viewer.py
archive/tutorials/kitware/: README.md  Select_Examples.py  Tutorial_Step1.py  Tutorial_Step2.py  Tutorial_Step3.py  Tutorial_Step4.py  Tutorial_Step5.py  Tutorial_Step6.py
archive/tutorials/seed_widget/: seed_widget_1.py
data/REFUGE_pure/: .gitignore
docs/: notes.md
notes/: 04_25_2023.md  05_5_2023.md
optimeyes/: __main__.py
optimeyes/app/: core.py  vtk.py
optimeyes/app/ui/: __init__.py  left_drawer.py  main_content.py  right_drawer.py  toolbar.py
optimeyes/utils/: database.erd
tutorials/kitware/: Select_Examples.py  Tutorial_Step1.py  Tutorial_Step2.py  Tutorial_Step3.py  Tutorial_Step4.py  Tutorial_Step5.py  Tutorial_Step6.py
tutorials/seed_widget/: seed_widget_1.py
