[project]
name = "optimeyes"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
    "vtk",
    "trame",
    "trame-vtk",
    "trame-vuetify",
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["MONAI", "VTK", "trame"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
]
exclude = [
    "docs",
    "archive",
]

[tool.hatch.build.targets.wheel]
packages = ["optimeyes"]

[project.scripts]
optimeyes = "optimeyes.app.core:main"